# pythonProject3

./: .coveragerc  .flake8  .gitignore  README.md  check_file  create_processing.py  generators.py  main.py  masks.py  processing.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  temp_create.py  test_widget.py  widget.py
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
