[project]
name = "bank_project"
version = "0.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.mypy]
python_version = "3.9"
explicit_package_bases = true
ignore_missing_imports = true
exclude = "venv"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203, W503"
exclude = "venv, migrations, __pycache__"